<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layItemMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#EEE">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="5dp">

        <com.xuexiang.xui.widget.layout.XUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/material_code" />

                <TextView
                    android:id="@+id/material_code"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/material_name" />

                <TextView
                    android:id="@+id/material_name"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/spec" />

                <TextView
                    android:id="@+id/spec"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/batch_no" />

                <TextView
                    android:id="@+id/batch_no"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="送货量"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/dn_amount"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|start" />


                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="收货量"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/receive_amount"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|start" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/location_code" />

                <TextView
                    android:id="@+id/location_code"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>
        </com.xuexiang.xui.widget.layout.XUILinearLayout>
    </androidx.cardview.widget.CardView>
</com.mcxtzhang.swipemenulib.SwipeMenuLayout>

