<?xml version="1.0" encoding="utf-8"?>
<com.xuexiang.xui.widget.layout.XUILinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEE">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <com.xuexiang.xui.widget.layout.XUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/material_code" />

                <TextView
                    android:id="@+id/material_code"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/material_name" />

                <TextView
                    android:id="@+id/material_name"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/spec" />

                <TextView
                    android:id="@+id/spec"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/batch_no" />

                <TextView
                    android:id="@+id/batch_no"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="库存量"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/dn_amount"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|start" />


                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="移库量"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/receive_amount"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/location_code" />

                <TextView
                    android:id="@+id/location_code"
                    style="@style/TextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center|start" />
            </LinearLayout>
        </com.xuexiang.xui.widget.layout.XUILinearLayout>
    </androidx.cardview.widget.CardView>

    <com.xuexiang.xui.widget.layout.XUILinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center|top"
        android:orientation="horizontal">

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_cancel"
            style="@style/SuperButton.Gray"
            android:layout_marginStart="20dp" />

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_submit"
            style="@style/SuperButton.Green"
            android:layout_marginStart="20dp"
            android:text="确定"
            tools:ignore="HardcodedText" />

    </com.xuexiang.xui.widget.layout.XUILinearLayout>
</com.xuexiang.xui.widget.layout.XUILinearLayout>
